typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserForInStatement3.ts.stderr
error: Expected one variable binding
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForInStatement3.ts:1:13
  |
1 | for (var a, b in X) {
  |             ^

error: UndefinedSymbol {
    sym: Atom('X' type=inline),
    span: Span {
        lo: BytePos(
            17,
        ),
        hi: BytePos(
            18,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForInStatement3.ts:1:18
  |
1 | for (var a, b in X) {
  |                  ^

